- added local_host job - added clean datasets flag

--- a/.github/workflows/on_push_or_pr.yml
+++ b/.github/workflows/on_push_or_pr.yml
@@ -4,9 +4,9 @@ on:
   pull_request:
     branches:
       - master
-    paths-ignore:
-      - '**/**.md'
-      - '**/**.txt'
+#    paths-ignore:  # currently creates a bug when PR contains solely ignored paths.
+#      - '**/**.md'
+#      - '**/**.txt'
 
 
 jobs:
@@ -29,11 +29,6 @@ jobs:
           value=$(python3 ./lithops/scripts/check_job_on_list.py "${GITHUB_WORKFLOW}")
           echo "::set-output name=string::$value"
 
-      - name: print LITHOPS_CONFIG_FILE
-        env:
-          LITHOPS_CONFIG_FILE: ${{ github.workspace }}/lithops/tests/config_files/lithops_config_CE_COS.yaml
-        run: |
-          echo "$LITHOPS_CONFIG_FILE"
 
   CE_COS:
 
@@ -104,6 +99,31 @@ jobs:
         run: |
           lithops test -t test_cloudobject -c lithops/tests/config_files/lithops_config_CF_COS.yaml
         #lithops test -c lithops/tests/config_files/lithops_config_CF_COS.yaml
+
+
+  LOCAL_HOST:
+    runs-on: ubuntu-latest
+
+    needs: Determine_Runnable_Jobs
+    if: contains(needs.Determine_Runnable_Jobs.outputs.jobs_to_run,'LOCAL_HOST')
+
+    steps:
+      - name: Clone Lithops repository
+        uses: actions/checkout@v2
+      - name: Install Python 3.8
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
+          architecture: x64
+      - name: Install dependencies
+        run: |
+          python3 setup.py develop
+
+      - name: Run Python tests
+        env:
+          LITHOPS_CONFIG_FILE: ${{ github.workspace }}/lithops/tests/config_files/lithops_config_LOCAL.yaml
+        run: |
+          lithops test
 
 
 
