--- a/lithops/tests/config_files/lithops_config_CF_COS.yaml
+++ b/lithops/tests/config_files/lithops_config_CF_COS.yaml
@@ -11,7 +11,7 @@ ibm_cf:
   endpoint    : https://eu-gb.functions.cloud.ibm.com
   namespace   : Omer.Cohen@ibm.com_dev
   api_key     : <cf_api_key>
-  runtime: cohenjomer/lithops-cf-<git-actor>
+  runtime: cohenjomer/lithops-cf-<git-actor>:<lithops-version>
 
 
 ibm_cos:
