--- a/.github/workflows/on_push_or_pr.yml
+++ b/.github/workflows/on_push_or_pr.yml
@@ -29,14 +29,15 @@ jobs:
           value=$(python3 ./lithops/scripts/check_job_on_list.py "${GITHUB_WORKFLOW}")
           echo "::set-output name=string::$value"
 
-      - name: Install dependencies
-        run: python3 setup.py develop
+#      - name: Install dependencies
+#        run: python3 setup.py develop
+#
+#      - name: split lithops version
+#        run: |
+#          lithops_version=$(lithops --version)
+#          stringarray = ($lithops_version)
+#          echo ${stringarray[2]}
 
-      - name: split lithops version
-        run: |
-          lithops_version=$(lithops --version)
-          stringarray = ($lithops_version)
-          echo ${stringarray[2]}
 #      - name: split lithops version
 #        run: |
 #          lithops_version= "${lithops --version}"
@@ -75,7 +76,7 @@ jobs:
          docker login -u cohenjomer -p "${{ secrets.DOCKER_TOKEN }}"
          cd runtime/code_engine
          value =
-         lithops runtime build cohenjomer/lithops-ce-"${GITHUB_ACTOR,,}":"${lithops --version}" -b code_engine
+         lithops runtime build cohenjomer/lithops-ce-"${GITHUB_ACTOR,,}":2.3.5.dev0 -b code_engine
 
       - name: Run Python tests
         run: |
@@ -109,7 +110,7 @@ jobs:
         run: |
           docker login -u cohenjomer -p "${{ secrets.DOCKER_TOKEN }}"
           cd runtime/ibm_cf
-          lithops runtime build -f Dockerfile.python38 cohenjomer/lithops-cf-"${GITHUB_ACTOR,,}"
+          lithops runtime build -f Dockerfile.python38 cohenjomer/lithops-cf-"${GITHUB_ACTOR,,}:2.3.5.dev0"
 
       - name: Run Python tests
         run: |
