--- a/lithops/tests/config_files/lithops_config_CE_COS.yaml
+++ b/lithops/tests/config_files/lithops_config_CE_COS.yaml
@@ -15,7 +15,7 @@ ibm:
 code_engine:
     namespace  : 75nd5iv9zir
     region     : us-south
-    runtime: cohenjomer/lithops-ce-<git-actor>:<lithops-version>
+    runtime: cohenjomer/lithops-ce-<git-actor>:235dev0
 
 ibm_cos:
     region : eu-de
